2015-04-15  Youri Hoogstrate
	* Added Sequence() class
	* Added Position
	* Added tests
	* Updated cmake

2015-04-14  Youri Hoogstrate
	* Added two util functions:
	  - min()
	  - file_exists()

2015-02-25  Youri Hoogstrate
	* Added Direction definition
	* Added Sequence definition

2014-12-03  Youri Hoogstrate
	* Changed directory structure; separated header files in ./include.
	* Changed from autotools to CMake.
	