@@ -45,3 +45,4 @@ add_executable(../build/test/direction_test Direction_test.cpp)
 add_executable(../build/test/nucleotide_test Nucleotide_test.cpp)
 add_executable(../build/test/position_test Position_test.cpp ../src/Sequence.cpp)
 add_executable(../build/test/sequence_test Sequence_test.cpp ../src/Sequence.cpp)
+add_executable(../build/test/segment_test Segment_test.cpp ../src/Segment.cpp ../src/Sequence.cpp)
