@@ -1,3 +1,6 @@
+2015-04-16  Youri Hoogstrate
+	* Added Segment() class + tests
+
 2015-04-15  Youri Hoogstrate
 	* Added Sequence() class
 	* Added Position
